# oldmailconvert

./: MANIFEST.in  README.md  adddate  adddate_test.py  compuservecvt.py  compuservecvt_test.py  maillogcvt.py  maillogcvt_test.py  mantes_test.py  mantescvt  pyproject.toml  setup.cfg  tests.py  uupccvt.py  uupccvt_test.py
testdata/: adddate.expected.1  adddate.expected.2  adddate.input.1  compuserve.expected.1  compuserve.expected.2  compuserve.input.1  compuserve.input.2  maillog.expected.1  maillog.expected.2  maillog.input.1  maillog.input.2  mantes.expected.1  mantes.input.1  uupc.expected.1  uupc.expected.2  uupc.input.1  uupc.input.2
