[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "oldmailconvert"
description = "Converts e-mail from UUPC/extended, CompuServe, MANTES et. al. to RFC822 format"
version = "3"
readme = "README.md"
authors = [{name = "Dan Fandrich", email = "dan@coneharvesters.com"}]
license = {text = "GPLv2+"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Users",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
]
requires-python = ">= 3.8"
dependencies = ["python-dateutil"]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-pyproject",
    "flake8-assertive",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-classmethod-staticmethod",
    "flake8-comprehensions",
    "flake8-datetimez",
    "flake8-deprecated",
    "flake8-docstrings",
    "flake8-get-chaining",
    "flake8-if-statements",
    "flake8-import-order",
    "flake8-mutable",
    "flake8-noqa",
    "flake8-picky-parentheses",
    "flake8-pie",
    "flake8-plus",
    "flake8-quotes",
    "flake8-raise",
    "flake8-return",
    "flake8-simplify",
    "flake8-super",
    "flake8-warnings",
    "pytype"
]

[project.urls]
Homepage = "https://github.com/dfandrich/oldmailconvert"
Repository = "https://github.com/dfandrich/oldmailconvert.git"

[project.scripts]
compuservecvt = "compuservecvt:main"
maillogcvt = "maillogcvt:main"
uupccvt = "uupccvt:main"

[tool.setuptools]
py-modules = [
    "compuservecvt",
    "maillogcvt",
    "uupccvt",
]
script-files = [
    "adddate",
    "mantescvt",
]
license-files = ["COPYING"]
include-package-data = false

# flake8-pyproject must be installed for flake8 to use these settings
[tool.flake8]
max-line-length = 100
ignore = ["E741", "D100", "D101", "D102", "D103", "PAR101"]
blanks-before-imports = 1
