[metadata]
name = oldmailconvert
summary = Converts obsolete e-mail formats
version = 1
description = Converts e-mail from UUPC/extended, CompuServe and MANTES to RFC822 format.
long_description_file = README.md
author = Dan Fandrich
author_email = dan@coneharvesters.com
home_page = https://github.com/dfandrich/oldmailconvert
license = GPLv2+
license_files = COPYING
classifiers = 
	Programming Language :: Python
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 4 - Beta
	Intended Audience :: Users
	Intended Audience :: End Users/Desktop
	Natural Language :: English
	Topic :: Communications :: Email
	Typing :: Typed

[options]
install_requires = 
	python-dateutil
py_modules = 
	compuservecvt
	maillogcvt
	uupccvt
	tests

scripts = 
	adddate
	mantescvt
test_suite = tests.tests
setup_requires = 
	flake8

[options.entry_points]
console_scripts = 
	compuservecvt = compuservecvt:main
	maillogcvt = maillogcvt:main
	uupccvt = uupccvt:main

[flake8]
max-line-length = 100
ignore = E741
