[metadata]
name = oldmailconvert
description = Converts e-mail from UUPC/extended, CompuServe, MANTES et. al. to RFC822 format
version = 3-dev
long_description_file = README.md
author = Dan Fandrich
author_email = dan@coneharvesters.com
home_page = https://github.com/dfandrich/oldmailconvert
license = GPLv2+
license_files = COPYING
classifiers = 
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Users
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Topic :: Communications :: Email
    Typing :: Typed

[options]
install_requires = 
    python-dateutil
py_modules = 
    compuservecvt
    maillogcvt
    uupccvt

scripts = 
    adddate
    mantescvt
test_suite = tests.tests
setup_requires = 
    flake8

[options.entry_points]
console_scripts = 
    compuservecvt = compuservecvt:main
    maillogcvt = maillogcvt:main
    uupccvt = uupccvt:main

[flake8]
max-line-length = 100
ignore = E741
